Wed Jan 24 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Got single threaded server to work on Linux
	- Implemented Address reuse (for Linux to ignore TIME_WAIT state)(to
	  re-listen the server quickly)
	- Disabled Nagle, as it interferes with our own buffering algorithm

Tue Jan 23 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Started port to UNIX sockets
	- Got single-threaded listener to work
	- GET "201 Created" types currently fail
	- OPTIONS HEAD and GET (file) works.
	- Fixed a few API misuses (for both Windows/UNIX)

Thu Jan 18 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	Released version 0.05
	- Fixed a bug in server_readln where it would return an array that is 
	  one character too long. The problem was hidden because the buffer
	  start out as zeroes.
	- Supports conditinal GET's 
	  If-Modified-Since: Using string comparison (Based on the assumption the client stores the string)
	  Tested & works with Firefox, Konqueror & IE. Opera is not playing nice, not even requesting an 
	  If-Modified-Since on forced refresh, and it's cache never expires.

Tue Jan 16 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Fixed up the indentation
	- Added OPTIONS
	- Added HEAD
	- Moved GET/HEAD logic to own file

Mon Jan 15 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Made directory listing look more like Apache
	- strl(cpy/cat) strnlen implementations are now optinally inlineable
	- Added option to limit listening to one specified interface only

Fri Jan 12 2007 Nickolas Girgoriadis <grigi_@sourceforge.net>
	- Went through all code trying to locate and fix possible buffer
	  overflow problems, I fixed over twenty.
	- While I was at it, I optimized some routines and flow, esp reducing
	  the no of string scans
	- Implemented output Buffering, so that header will get sent with some
	  data appended (one packet) versus about 6-9 packets.