@@ -1,0 +1,182 @@
+/*  MiniWebSvr - A small webserver
+    Copyright (C) 2007  Nickolas Antonie Grigoriadis
+    E-Mail: grigi_ at users.sourceforge.net
+
+    This library is free software; you can redistribute it and/or
+    modify it under the terms of the GNU Lesser General Public
+    License as published by the Free Software Foundation; either
+    version 2.1 of the License, or (at your option) any later version.
+
+    This library is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+    Lesser General Public License for more details.
+
+    You should have received a copy of the GNU Lesser General Public
+    License along with this library; if not, write to the Free Software
+    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+*/
+
+/** This is the MiniWebSvr Logo so that it can be embedded into the executable
+ * Since the idea behind this is that the server only REQUIRES 1 executable.
+ * Useless until we add dynamic content hooks.
+ *
+ * Generated with bin2hex.pl by Chami.com
+ */
+char MiniWebSvrlogo_data[2316] = /* 2316 */
+{0x89,0x50,0x4E,0x47,0x0D,0x0A,0x1A,0x0A,0x00,0x00,0x00,0x0D,0x49,0x48,0x44
+,0x52,0x00,0x00,0x01,0x27,0x00,0x00,0x00,0x3F,0x08,0x03,0x00,0x00,0x00,0x95
+,0x76,0xFE,0x31,0x00,0x00,0x01,0xEC,0x50,0x4C,0x54,0x45,0xED,0xED,0xED,0x33
+,0x33,0x33,0x34,0x34,0x34,0x35,0x35,0x35,0x36,0x36,0x36,0x37,0x37,0x37,0x38
+,0x38,0x38,0x39,0x39,0x39,0x63,0x33,0x03,0x3A,0x3A,0x3A,0x66,0x33,0x00,0x3B
+,0x3B,0x3B,0x3C,0x3C,0x3C,0x3D,0x3D,0x3D,0x3E,0x3E,0x3E,0x41,0x3E,0x3B,0x3F
+,0x3F,0x3F,0x40,0x40,0x40,0x53,0x3D,0x26,0x41,0x41,0x41,0x42,0x42,0x42,0x43
+,0x43,0x43,0x44,0x44,0x44,0x55,0x42,0x2F,0x6E,0x3E,0x0F,0x45,0x45,0x45,0x6F
+,0x3F,0x0F,0x46,0x46,0x46,0x70,0x40,0x10,0x48,0x48,0x48,0x49,0x49,0x49,0x4C
+,0x4C,0x4C,0x5A,0x4A,0x3A,0x4D,0x4D,0x4D,0x4E,0x4E,0x4E,0x4F,0x4F,0x4F,0x50
+,0x50,0x50,0x51,0x51,0x51,0x52,0x52,0x52,0x79,0x4C,0x1F,0x53,0x53,0x53,0x55
+,0x55,0x55,0x56,0x56,0x56,0x58,0x58,0x58,0x59,0x59,0x59,0x5A,0x5A,0x5A,0x5B
+,0x5B,0x5B,0x5C,0x5C,0x5C,0x5D,0x5D,0x5D,0x5E,0x5E,0x5E,0x82,0x59,0x2F,0x60
+,0x60,0x60,0x63,0x63,0x63,0x65,0x65,0x65,0x66,0x66,0x66,0x69,0x69,0x69,0x6A
+,0x6A,0x6A,0x8C,0x65,0x3F,0x8C,0x66,0x40,0x6D,0x6D,0x6D,0x71,0x71,0x71,0x72
+,0x72,0x72,0x73,0x73,0x73,0x75,0x75,0x75,0x76,0x76,0x76,0x95,0x72,0x4F,0x96
+,0x73,0x50,0x78,0x78,0x78,0x79,0x79,0x79,0x7C,0x7C,0x7C,0x7D,0x7D,0x7D,0x7E
+,0x7E,0x7E,0x7F,0x7F,0x7F,0x82,0x82,0x82,0x9F,0x7F,0x5F,0x85,0x85,0x85,0x86
+,0x86,0x86,0x87,0x87,0x87,0x9B,0x85,0x6E,0x8A,0x8A,0x8A,0x8C,0x8C,0x8C,0x8D
+,0x8D,0x8D,0x8F,0x8F,0x8F,0x90,0x90,0x90,0xA9,0x8C,0x6F,0x91,0x91,0x91,0x95
+,0x95,0x95,0x96,0x96,0x96,0x99,0x99,0x99,0x9A,0x9A,0x9A,0xB2,0x99,0x7F,0xA0
+,0xA0,0xA0,0xA1,0xA1,0xA1,0xA5,0xA5,0xA5,0xA6,0xA6,0xA6,0xBC,0xA5,0x8F,0xBC
+,0xA6,0x90,0xAC,0xAC,0xAC,0xAD,0xAD,0xAD,0xAE,0xAE,0xAE,0xB0,0xB0,0xB0,0xB1
+,0xB1,0xB1,0xB2,0xB2,0xB2,0xB3,0xB3,0xB3,0xC5,0xB2,0x9F,0xC6,0xB3,0xA0,0xB7
+,0xB7,0xB7,0xB9,0xB9,0xB9,0xBA,0xBA,0xBA,0xBB,0xBB,0xBB,0xBD,0xBD,0xBD,0xBF
+,0xBF,0xBF,0xC0,0xC0,0xC0,0xCF,0xBF,0xAF,0xC2,0xC2,0xC2,0xD0,0xC0,0xB0,0xC4
+,0xC4,0xC4,0xC5,0xC5,0xC5,0xC6,0xC6,0xC6,0xC8,0xC8,0xC8,0xC9,0xC9,0xC9,0xCA
+,0xCA,0xCA,0xCB,0xCB,0xCB,0xCC,0xCC,0xCC,0xCD,0xCD,0xCD,0xD9,0xCC,0xBF,0xCE
+,0xCE,0xCE,0xD1,0xD1,0xD1,0xD2,0xD2,0xD2,0xD4,0xD4,0xD4,0xD5,0xD5,0xD5,0xD6
+,0xD6,0xD6,0xD7,0xD7,0xD7,0xD8,0xD8,0xD8,0xD9,0xD9,0xD9,0xDA,0xDA,0xDA,0xE2
+,0xD9,0xCF,0xDD,0xDD,0xDD,0xDF,0xDF,0xDF,0xE1,0xE1,0xE1,0xE3,0xE3,0xE3,0xE4
+,0xE4,0xE4,0xE5,0xE5,0xE5,0xE6,0xE6,0xE6,0xEC,0xE5,0xDF,0xE7,0xE7,0xE7,0xE8
+,0xE8,0xE8,0xEC,0xEC,0xEC,0xF0,0xF0,0xF0,0xF1,0xF1,0xF1,0xF2,0xF2,0xF2,0xF5
+,0xF2,0xEF,0xF3,0xF3,0xF3,0xF6,0xF3,0xF0,0xF5,0xF5,0xF5,0xF6,0xF6,0xF6,0xF7
+,0xF7,0xF7,0xF8,0xF8,0xF8,0xF9,0xF9,0xF9,0xFA,0xFA,0xFA,0xFC,0xFC,0xFC,0xFD
+,0xFD,0xFD,0xFE,0xFE,0xFE,0xFF,0xFF,0xFF,0x95,0x70,0x77,0x49,0x00,0x00,0x00
+,0x01,0x74,0x52,0x4E,0x53,0x00,0x40,0xE6,0xD8,0x66,0x00,0x00,0x00,0x01,0x62
+,0x4B,0x47,0x44,0x00,0x88,0x05,0x1D,0x48,0x00,0x00,0x00,0x09,0x70,0x48,0x59
+,0x73,0x00,0x00,0x0B,0x12,0x00,0x00,0x0B,0x12,0x01,0xD2,0xDD,0x7E,0xFC,0x00
+,0x00,0x06,0xAC,0x49,0x44,0x41,0x54,0x78,0xDA,0xED,0x9B,0xFD,0x7B,0xD3,0x44
+,0x1C,0xC0,0x93,0x5C,0xC7,0x5C,0x61,0xB3,0x75,0x38,0x25,0x56,0xAA,0x82,0x56
+,0xA4,0xBE,0x2C,0xD2,0x69,0xD1,0x82,0x05,0x5F,0x6A,0x40,0x9D,0x5A,0xB5,0x46
+,0xB7,0x82,0x48,0x09,0x22,0x96,0x88,0xEF,0xA3,0x0E,0x15,0x47,0x60,0x30,0x03
+,0xFC,0xC3,0x26,0xF7,0x96,0xBB,0x34,0xCD,0x2E,0x3C,0xED,0x78,0x9E,0xF5,0xBE
+,0x3F,0xEC,0x49,0x73,0xBD,0xDB,0x73,0x9F,0x7D,0xDF,0x6F,0xA7,0x28,0x43,0x91
+,0x76,0xBD,0x90,0x2D,0xD4,0xDB,0x8A,0x94,0x24,0x71,0x0A,0x59,0x24,0x05,0x47
+,0xC2,0x48,0x50,0xA6,0x6C,0x28,0x52,0xA5,0x06,0x8A,0x9D,0x65,0xC5,0x96,0x40
+,0x06,0x48,0x81,0xE3,0x54,0x90,0x40,0xE2,0xE5,0x54,0x96,0x97,0x53,0x12,0x49
+,0xAC,0x1C,0x8E,0x70,0x3A,0x2C,0x91,0xC4,0x4A,0x36,0x2A,0x12,0x89,0xE4,0x24
+,0x39,0x49,0xFF,0x24,0xE3,0xDD,0xD6,0xCB,0x52,0x2D,0xAF,0xE6,0x6B,0x4B,0xF7
+,0x35,0xF7,0xF1,0xB1,0xC9,0x9F,0xBA,0x79,0x15,0x49,0xBE,0x9B,0x7E,0xF2,0xD7
+,0x8F,0x71,0x9C,0xCE,0x6F,0x63,0x65,0x52,0x43,0x49,0xAB,0x52,0x17,0x9E,0x07
+,0xE0,0x91,0xF1,0xB0,0xBA,0x8E,0xCA,0x4A,0x27,0x95,0x22,0xEE,0x03,0x5A,0xEE
+,0x9D,0x1B,0x97,0x69,0xBF,0xE0,0xF2,0x36,0xB6,0xBA,0x3C,0xC7,0x29,0x2F,0x3E
+,0xF1,0x9B,0x03,0x19,0x15,0x2C,0x5C,0x83,0xCE,0xFC,0x58,0x21,0x5B,0x38,0xB6
+,0x9D,0x5D,0xF8,0xFA,0x2B,0x2A,0x2F,0xCB,0x62,0xF3,0x6E,0x7E,0xB0,0x07,0x80
+,0xCC,0xC2,0x95,0x71,0x09,0xEB,0x7F,0x82,0x08,0xA7,0x05,0x91,0x59,0x67,0xE7
+,0x33,0x00,0xE4,0xDE,0xFE,0x67,0x8C,0xF2,0x1F,0x35,0x2A,0x9B,0x4D,0xB8,0xF7
+,0x6D,0x65,0x27,0x00,0xE0,0xD9,0x2F,0xEF,0x8C,0x55,0x9E,0x98,0x8E,0xD3,0xEA
+,0x89,0xBD,0x40,0xF3,0x55,0xE9,0xCD,0x2B,0xCA,0x98,0x89,0x30,0xA7,0xF5,0xA5
+,0xB7,0x0E,0x4C,0x6A,0xBE,0x4C,0xBF,0xFE,0x5D,0xCA,0xDF,0x51,0x51,0x8B,0x6B
+,0xE9,0x87,0x92,0xC5,0xF2,0xC5,0x8B,0x79,0xEF,0xD9,0x96,0x35,0x8A,0x36,0xFD
+,0x42,0x04,0xD3,0xC4,0xFC,0xD1,0xCF,0xCE,0x5E,0xBD,0xC7,0x7C,0x63,0xED,0xFB
+,0xAF,0xDE,0x7F,0xED,0x99,0x5D,0xBE,0xAD,0x01,0x2D,0xB3,0xFF,0xE4,0xF5,0x01
+,0x0B,0xD5,0xFC,0xC9,0xB9,0xF0,0x63,0x23,0xFC,0x58,0xE1,0x47,0x78,0x4C,0x70
+,0xA8,0xEA,0x27,0x15,0x26,0xDE,0xA7,0xFF,0x58,0xC2,0xA3,0x25,0xFF,0xD9,0x4A
+,0xA8,0xBF,0x7B,0xFD,0xAF,0x4D,0x98,0xA0,0xE8,0xD6,0xD0,0x39,0x2D,0xF7,0x29
+,0x94,0x16,0x10,0x01,0x93,0xD3,0x33,0xBB,0x1F,0x9D,0xDD,0x35,0xB9,0x03,0x60
+,0xC9,0xEC,0x79,0xF5,0xA3,0x5F,0x12,0x16,0x2A,0x07,0x73,0xC3,0x84,0x3E,0x17
+,0xEA,0x26,0x5C,0x75,0x65,0xB0,0x36,0xAF,0x28,0x96,0xBF,0x37,0x03,0xBD,0x81
+,0xED,0x76,0x2F,0x91,0x45,0xC2,0x98,0x41,0x12,0xDE,0xEA,0x88,0xF3,0xA7,0x0C
+,0xD0,0xB4,0x1D,0xB9,0x9D,0x94,0x8E,0x2F,0x53,0x73,0x4F,0xCF,0x1F,0xFD,0xE2
+,0x0F,0x21,0x03,0x6E,0xF0,0xD9,0x2B,0x82,0x53,0x0C,0x1E,0xE3,0xAD,0x0B,0x0F
+,0x39,0x61,0x43,0xC6,0x0C,0x8F,0x6D,0x9C,0xA4,0x36,0x4D,0x2C,0xA7,0x6A,0x58
+,0x19,0x18,0xC3,0xE6,0x74,0x8E,0xE3,0x74,0x6E,0xE3,0xBD,0x19,0x00,0xF6,0x77
+,0x94,0xF5,0xBF,0x7E,0xEF,0xFE,0xF0,0xF3,0xBF,0x1B,0xA2,0xCB,0x6C,0xC0,0xE9
+,0x39,0xD6,0x0A,0x49,0x76,0xDF,0x61,0x01,0xF6,0x17,0x03,0x0D,0xBC,0x6B,0xE4
+,0x55,0xF4,0xE0,0xB1,0x0E,0x1F,0x9B,0x49,0xDB,0x8D,0xE3,0xE4,0x22,0x55,0x2A
+,0x41,0xD3,0xEB,0x8D,0xD2,0xF2,0x82,0x2C,0xF3,0xC6,0xBB,0x33,0x1A,0x38,0x74
+,0x2D,0xE5,0x2A,0x2B,0x68,0x81,0x2E,0x17,0x1E,0x5A,0x78,0xAC,0x35,0xB0,0x1C
+,0xC2,0x43,0x06,0xF1,0x44,0x2E,0xD3,0xEC,0x0B,0xB4,0xA3,0x99,0x86,0x53,0x60
+,0xBE,0xBA,0x07,0x4F,0x14,0x75,0x77,0xF8,0xAE,0xFC,0x12,0xED,0x17,0x5C,0x42
+,0x2F,0xAE,0x1F,0x02,0x5A,0xFE,0x93,0x74,0x8B,0xB4,0x54,0xD6,0xF0,0x70,0xD1
+,0x58,0x89,0x2F,0x0B,0x5B,0xAD,0x6E,0x8C,0xFB,0xAD,0x92,0xAD,0x12,0xDD,0xE2
+,0xCF,0x03,0x1D,0x3F,0xC0,0xF5,0xFA,0x38,0xB9,0x6D,0x26,0xBC,0x51,0x37,0x67
+,0x27,0x63,0x72,0xAD,0xFB,0x3C,0x8F,0x5D,0x3E,0x92,0x57,0xF3,0x47,0x96,0xF9
+,0x3E,0x40,0x79,0x35,0xCD,0x12,0x0D,0x95,0x35,0x3C,0x64,0x76,0x6A,0x91,0x22
+,0xAC,0x10,0x95,0x53,0x96,0xA0,0x87,0xCF,0x75,0xB8,0x21,0x9B,0x28,0x11,0x76
+,0xC4,0x81,0x1A,0xF5,0x18,0x8F,0xEE,0xD5,0xB1,0xDB,0x31,0x3D,0x96,0x93,0x5B
+,0xE5,0xC2,0x9B,0x13,0x39,0x69,0x2D,0x31,0x27,0xD4,0x50,0x51,0xBD,0x80,0x64
+,0xCF,0xA4,0x46,0x3E,0x04,0xF9,0x7C,0x06,0x4C,0x7C,0x9C,0x2A,0x47,0x62,0x0D
+,0x8F,0x4B,0xC6,0x38,0x4E,0x0D,0xAE,0x33,0x41,0x86,0x3C,0x62,0x46,0x18,0x47
+,0x09,0x6B,0x07,0xCE,0x10,0x6C,0xBD,0xEF,0xC4,0x19,0x42,0x8B,0x7A,0x6D,0x9D
+,0x07,0xC5,0xAC,0x80,0x35,0x36,0x78,0x13,0x20,0xD7,0x87,0x67,0x8D,0xAB,0x65
+,0x4D,0x3B,0x28,0x9E,0x03,0x42,0xF5,0x21,0x86,0xD7,0xC1,0x1F,0x50,0xC0,0xE3
+,0x38,0x85,0xB2,0xC1,0x0C,0xC1,0x1D,0xB6,0x91,0x5E,0x19,0x58,0x8F,0xEA,0xD4
+,0xA1,0xC7,0x1D,0xCD,0x47,0xDA,0xCD,0x08,0x54,0x9B,0x2A,0x63,0xC8,0xCD,0xA6
+,0x69,0x99,0xFF,0x87,0xB0,0x88,0x5A,0x0E,0xD3,0x6F,0x9D,0xCC,0x80,0x27,0xCF
+,0xA4,0xE1,0xB4,0x48,0x0C,0xAF,0x86,0x3F,0x20,0xED,0x8A,0x70,0xAA,0xB5,0x1A
+,0xD4,0xC9,0x53,0x4E,0x18,0x4A,0xF0,0x57,0xB7,0xAA,0x88,0x99,0x4E,0xAC,0xC6
+,0x83,0x6A,0x62,0x3A,0x3D,0xA7,0xA9,0x53,0x5B,0x44,0xFB,0xD5,0x4D,0xCB,0x42
+,0xA6,0x6A,0x31,0x69,0x66,0xBD,0xCF,0xED,0x11,0xD5,0x82,0x9C,0x74,0xDB,0x19
+,0xAE,0x97,0xFF,0xE9,0x39,0x90,0x39,0x91,0x22,0xDC,0xC1,0xE4,0xB2,0x8B,0xA1
+,0xAD,0x55,0x48,0xC0,0xE3,0x39,0x75,0xC8,0x53,0x8D,0xE5,0xD4,0x46,0xC6,0x10
+,0x70,0x70,0xDB,0x70,0xAB,0xD0,0xA1,0xB8,0x64,0xB7,0x06,0xF2,0x4B,0x9E,0x41
+,0x94,0x81,0x01,0xE2,0xE8,0xA1,0x25,0x21,0x50,0x86,0x17,0x26,0xF7,0x68,0x0D
+,0xAC,0x59,0xD6,0x68,0xFE,0x57,0xE4,0xF6,0x1B,0x00,0x2C,0xDC,0x15,0x6D,0x1E
+,0x17,0xA1,0x33,0x6F,0x60,0xB3,0x83,0x1F,0x6A,0xFD,0xFE,0x89,0x26,0xEF,0x15
+,0x96,0x13,0x72,0xDA,0x2E,0xDC,0x30,0xFA,0x49,0x5D,0xBB,0x42,0x37,0x4B,0x76
+,0x4E,0x5E,0x92,0xE4,0xCA,0x66,0x76,0x8F,0x2C,0x8B,0xC4,0x3B,0x52,0x10,0xD9
+,0x98,0xA4,0x35,0xAA,0x13,0xC6,0x4F,0x33,0xA0,0x2C,0xD2,0x66,0x5A,0x84,0x1B
+,0xEE,0x22,0xC3,0x83,0x66,0x07,0x19,0x94,0xFB,0x38,0xAD,0xD0,0xE8,0xC8,0x71
+,0x42,0x49,0x80,0x85,0xB6,0x55,0x22,0x51,0xA9,0x4A,0x10,0xEA,0x55,0x22,0x3A
+,0xE3,0xF0,0x1D,0x36,0xB0,0x11,0xAF,0x84,0x7C,0x3E,0x06,0x45,0x62,0x26,0xA9
+,0x14,0x59,0xCF,0x3E,0xE4,0x74,0x7D,0x4E,0x9B,0xFE,0x51,0x2C,0xDC,0x2D,0x2A
+,0xD8,0xF0,0x50,0x31,0xD2,0x25,0x01,0x8F,0xCF,0x0B,0xB8,0x10,0x18,0x72,0x82
+,0x7F,0x79,0x03,0xE9,0x45,0x80,0xA8,0x49,0x8B,0x60,0xAB,0xEF,0xC8,0xD9,0xC2
+,0x9C,0xE8,0x6F,0x6F,0xB2,0x15,0x9D,0x5B,0xCA,0x86,0x34,0xD0,0x2A,0x34,0xC5
+,0xB0,0x46,0x52,0xFA,0x41,0xF9,0x6D,0x4E,0x9D,0xBD,0xB8,0xE9,0xB7,0x8A,0xE8
+,0xB0,0x06,0x1A,0x1E,0x32,0x3B,0x65,0x2D,0x1A,0xD4,0x12,0x39,0x59,0x24,0xD2
+,0xE1,0x3C,0xC8,0xA0,0x09,0xB7,0x00,0xA7,0xC8,0xF6,0x8D,0xD0,0xB1,0x23,0x83
+,0xAB,0x13,0xAF,0x36,0x42,0x4E,0xCA,0xAD,0x17,0xC0,0xD4,0x69,0x91,0x70,0xE7
+,0x9B,0x14,0x34,0x3C,0x64,0x76,0xF4,0x9D,0x18,0x27,0x87,0x0D,0xF0,0xDC,0xFF
+,0x2A,0xC0,0xBD,0x59,0xAC,0xF4,0x12,0xF5,0x09,0x83,0x62,0x52,0x2A,0x8B,0x63
+,0x3E,0x2A,0x4E,0xCA,0xCD,0x97,0xB5,0xCC,0x19,0x91,0x70,0x47,0xDA,0x29,0xB8
+,0x3D,0x50,0x8E,0x04,0xFF,0x44,0x4E,0x0A,0xA3,0x2B,0xA4,0xEE,0x37,0x28,0x41
+,0x23,0xB6,0xBE,0xB3,0xFB,0xFC,0x93,0xE3,0x84,0x8E,0x9D,0xF5,0xEB,0x6C,0x7A
+,0x30,0x32,0x4E,0x8A,0xF2,0x12,0xD8,0x9D,0xDC,0xC3,0xEC,0x90,0xCC,0xA9,0xC1
+,0x14,0x2C,0x35,0x1C,0xDE,0xC4,0x38,0xE1,0x8A,0xC5,0x0D,0xF3,0x45,0x92,0x0D
+,0xB2,0xF1,0x8E,0xE3,0x44,0x3C,0x72,0x1B,0x3B,0x75,0xAF,0x0A,0xCB,0x60,0xAE
+,0x23,0xE3,0x71,0xD9,0xE9,0x88,0x39,0xDD,0xA9,0x68,0x13,0x17,0x37,0xAB,0x82
+,0xE1,0x7E,0xBB,0x88,0xD3,0x62,0x1C,0x8C,0x64,0x4E,0xB8,0x13,0xC9,0x34,0x48
+,0x88,0xBE,0x04,0xDE,0xA5,0x84,0x40,0xB9,0x86,0xC9,0xF4,0xF0,0xB0,0x9A,0xD9
+,0x78,0x22,0xF4,0xD6,0x86,0x8B,0xB3,0xAC,0x12,0xD7,0xE1,0x2C,0x29,0x5B,0xC1
+,0x49,0xB9,0xBD,0x4F,0x7B,0xE2,0xD7,0x4D,0xC2,0x5D,0x23,0xEC,0x63,0xA2,0xAE
+,0x5C,0x07,0x73,0x11,0xE3,0x64,0xB3,0x2A,0x84,0xEA,0x39,0x8F,0x29,0x61,0xF5
+,0xA6,0x9F,0x8F,0x9B,0xE1,0x57,0xA2,0xF9,0x78,0x1B,0x9B,0x9F,0x4F,0xAA,0xCA
+,0x55,0x2F,0x3D,0x26,0x5D,0x1F,0x39,0x27,0xE5,0xBF,0x83,0x60,0xEF,0xAD,0xE4
+,0xA6,0x6F,0x2B,0xEC,0x1B,0x14,0x39,0xA7,0x25,0xC6,0xC9,0x63,0x55,0xC8,0xCC
+,0xB2,0xC5,0x2A,0x5F,0xDF,0x99,0x71,0xF5,0x9D,0x19,0x22,0xC9,0x66,0xB9,0xC9
+,0xD0,0xD9,0xE9,0xCA,0x16,0x71,0x52,0xFE,0x9E,0x55,0x5F,0xDC,0x34,0xDC,0x11
+,0xC3,0x5B,0xE4,0xDE,0x8A,0x71,0x42,0x3A,0xC4,0x92,0xA1,0x65,0x1A,0x07,0xCA
+,0x8C,0xEB,0x17,0x98,0xD1,0xEF,0x31,0x0D,0x28,0x9B,0xA9,0x7B,0x47,0xCF,0x49
+,0xB9,0x30,0x05,0x8E,0x0F,0x1A,0xA3,0xA9,0x12,0x36,0xBC,0x35,0x2E,0xA9,0x12
+,0xE4,0x54,0x67,0xE3,0x5A,0xE4,0x72,0x03,0xED,0x3F,0x19,0x0E,0xDB,0x7F,0xEA
+,0x21,0x4B,0x2B,0xD1,0x6F,0xE2,0x86,0x54,0xB6,0xCA,0xFA,0xFD,0x12,0xB5,0xE0
+,0xAD,0xE0,0xA4,0x2C,0x01,0x70,0x5A,0x79,0x70,0x12,0xF4,0x33,0x9D,0xBE,0x13
+,0xBB,0xA0,0x9F,0xC9,0xB5,0x7F,0x5D,0xDB,0xB2,0x6C,0x4F,0x79,0x90,0x72,0x1C
+,0x3C,0xFC,0xA1,0xBC,0x18,0xB5,0xB9,0xDC,0x7D,0xEA,0x21,0x79,0x31,0x4A,0x40
+,0xE4,0xC5,0x28,0x21,0x91,0x17,0xA3,0xC4,0x44,0x5E,0x8C,0x12,0x12,0x79,0x31
+,0x4A,0x4C,0xE4,0xC5,0x03,0x31,0x91,0x17,0x59,0x24,0x27,0xC9,0x49,0xFA,0x27
+,0x19,0xEF,0x64,0xFE,0x34,0x16,0x72,0x7E,0x5C,0x2E,0x46,0x0D,0xD3,0xF2,0xA4
+,0xD5,0x25,0xC8,0x78,0x5C,0x8C,0x1A,0x8A,0x4A,0x6D,0xFB,0x8B,0x51,0xF1,0xF2
+,0x3F,0xEC,0x42,0x75,0x9B,0xBA,0xFD,0x5C,0x85,0x00,0x00,0x00,0x00,0x49,0x45
+,0x4E,0x44,0xAE,0x42,0x60,0x82};
+/* end binary data. size = 2316 bytes */
